--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,19 @@
         {
             "name": "Piotr Ścibor",
             "email": "piotr.scibor@pragmago.tech"
+        },
+        {
+            "name": "Piotr Biernat",
+            "email": "piotr1biernat@gmail.com"
         }
     ],
     "autoload": {
         "psr-4": {
             "PragmaGoTech\\Interview\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.4",
+        "symfony/var-dumper": "^7.1"
     }
 }
