--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.4",
-        "symfony/var-dumper": "^7.1"
+        "symfony/var-dumper": "^7.1",
+        "phpstan/phpstan": "^2.0"
     },
     "scripts": {
         "tests": "./vendor/bin/phpunit",
